updating and adding new files

--- a/global.css
+++ b/global.css
@@ -72,3 +72,12 @@ a .return-home {
 a .return-home:visited {
     color: #3C275A;
 }
+.drop-down-menu {
+    padding: 12px 20px;
+    margin: 8px 0;
+    display:inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+
+}
